Fixes overflow problem on switch file

--- a/src/renderer/features/workbench/pages/detected/pages/Editor/Editor.scss
+++ b/src/renderer/features/workbench/pages/detected/pages/Editor/Editor.scss
@@ -76,7 +76,8 @@
   .editor {
     height: 100%;
     display: flex;
-    flex-direction: column;
+    background: #1a1a1a;
+    border-radius: 4px;
 
     #viewer {
       display: grid;
@@ -87,6 +88,7 @@
     .file-loader {
       margin: auto;
       font-size: 12px;
+      color: #d9d7d7;
     }
 
     .line-highlight {
